forms-flow-eforms-signature-services/infra/dev/ingress_dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signature-services-nginx
  namespace: forms-flow-eforms-signature-services
  #annotations:
   # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "forms-flow-eforms-signature-services"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: signature-services-svc
            port:
              number: 8004
